# nova-examples

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
examples/complex_pydantic_rules/: main.py  model.py  view.py  view_model.py
examples/conditional_disabling/: main.py  model.py  view.py  view_model.py
examples/conditional_rendering/: main.py  model.py  view.py  view_model.py
examples/data_selector/: main.py  model.py  view.py  view_model.py
examples/dialog/: main.py  view.py  view_model.py
examples/downloading_files/: main.py  model.py  view.py  view_model.py
examples/dynamic_pydantic_rules/: main.py  model.py  view.py  view_model.py
examples/matplotlib/: main.py  model.py  view.py  view_model.py
examples/multitab/: main.py
examples/multitab/model/: __init__.py  input.py  stats.py
examples/multitab/view/: input.py  main_view.py  stats.py
examples/multitab/view_model/: __init__.py  input.py  main.py  stats.py
examples/oncat/: main.py  model.py  view.py
examples/ornl/neutron_data_selector/: main.py  model.py  view.py  view_model.py
examples/ornl/oncat/: main.py  view.py  view_model.py
examples/plotly/: main.py  model.py  view.py  view_model.py
examples/pydantic_form/: main.py  model.py  view.py  view_model.py
examples/pydantic_form_with_options/: main.py  model.py  view.py  view_model.py
examples/pydantic_monaco/: main.py  model.py  view.py  view_model.py
examples/run_galaxy_tool/: main.py  model.py  view.py  view_model.py
examples/run_galaxy_workflow/: main.py  model.py  view.py  view_model.py
examples/run_ndip_tool/: main.py  model.py  view.py  view_model.py
examples/run_ndip_workflow/: main.py  model.py  view.py  view_model.py
examples/trame_bindings/: main.py  model.py  mvvm_factory.py  view.py  view_model.py
examples/trame_state/: main.py  view.py  view_model.py
examples/vtk/: main.py  model.py  view.py  view_model.py
tests/: test_examples.py
