[project]
name = "nova-examples"
version = "0.1.0"
description = "NOVA Examples"
authors = []
license = "MIT"
keywords = ["Galaxy", "NOVA", "python"]
requires-python = ">=3.11,<3.14"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.dependencies]

[tool.pixi.pypi-dependencies]
nova-examples = { path = ".", editable = true }
nova-galaxy = "*"
nova-mvvm = "*"
nova-trame = "*"
mypy = "*"
pre-commit = ">=2.20.0"
pytest = "*"
requests = "*"
ruff = "*"
trame-code = "*"
nltk = "*"
pillow = ">=11.3.0"
trame-vtk = ">=2.9.1"
vtk = ">=9.5.2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["examples"]

[tool.pytest.ini_options]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__"]

[tool.ruff]
extend-exclude = [".pixi"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "D102", # Missing docstring in public function
    "D103", # Missing docstring in public method
    "D401"  # imperative mood

]

[tool.ruff.lint.extend-per-file-ignores]
'__init__.py' = ['D104'] # Missing docstring in public package



[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = true
ignore_errors = true
disable_error_code = ["import-untyped"]
# You can exclude files with the following (ONLY WHEN NECESSARY)
# exclude = ["path/to/file"]
